# aoc

./: .gitignore  README.md  new.sh
.github/workflows/: rust.yml
2015/bash/: day1.sh
2015/python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py
2015/rust-sln/: Cargo.toml
2015/ts/: aoc-2015-ts.sublime-workspace  day1.ts  day10.ts  day2.ts  day2_bench.ts  day2_test.ts  day3.ts  day3_test.ts  day4.ts  day5.ts  day5_test.ts  day6.ts  day7.ts  day8.ts  day8_test.ts  day9.ts  dijkstra.ts  utils.ts
2015/webgpu/: day01.html  day01.js  day02.html  day02.js
2016/rs/: Cargo.toml
2016/ts/: aoc-2016-rs.sublime-project  aoc-2016-rs.sublime-workspace  aoc-2016-ts.sublime-project  aoc-2016-ts.sublime-workspace  day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  day06.ts  day07.ts  day08.ts  day09.ts  day09_1.ts  day10_1.ts
2018/python/: day01.py
2019/python/: day1.py  day2.py  day3.py  day4.py
2019/rust-sln/: Cargo.toml
2019/rust-sln/src/: day1.rs  day2.rs  day3.rs
2020/cpp/: build.sh  day01.cpp  day02.cpp  day03.cpp  day15.cpp
2020/python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py
2020/rust-sln/: Cargo.toml
2020/ts/: day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  (+9 more)
2022/rs/: Cargo.toml
2022/rs/src/: day1.rs  day2.rs  day3.rs  day5.rs
2023/: day13_algo.md
download.py/: main.py
templates/: python.py  rust.rs
(+251 files in other folders)
